# pEyeON-Analytics

./: .gitignore  EyeOnData.py  EyeOnData.toml-template  README.md  clean.sh  databases.ipynb  eyeon-batch-summary.sh  eyeon-parse.sh  load_eyeon.py  pyproject.toml  requirements.txt  test.sh
dbt_eyeon_gold/: .user.yml  README.md  dbt_project.yml  profiles.yml
dbt_eyeon_gold/macros/: parquet_glob.sql  x509_attr.sql
dbt_eyeon_gold/models/: sources.yml
dbt_eyeon_gold/models/certs/: _certs__models.yml
dbt_eyeon_gold/models/certs/marts/: dim_certificates.sql  fct_observation_certificates.sql  mart_cert_expiration_years.sql  mart_cert_feature_summary.sql  mart_cert_issue_years.sql  mart_cert_key_sizes.sql  (+3 more)
dbt_eyeon_gold/models/gold/: all_metadata.sql  batch_summary.sql  gold_files.sql  gold_filetype_counts.sql  obs_with_multiple_uuid.sql  schema.yml
dbt_eyeon_gold/models/staging/: stg_batch_info.sql  stg_metadata_coff_file.sql  stg_metadata_elf_file.sql  stg_metadata_error.sql  stg_metadata_java_file.sql  stg_metadata_js_file.sql  stg_metadata_mach_o_file.sql  stg_metadata_native_lib.sql  stg_metadata_ole_file.sql  stg_metadata_pe_file.sql  stg_metadata_uimage_file.sql  stg_raw_obs.sql  stg_raw_obs_filetype.sql
dbt_eyeon_gold/tests/: test_dim_certificates__valid_date_range.sql
pages/: BrowseDltData.py  EyeOnSummary.py  Schema_Blame.py  _base_page.py  certs.py  debug_page.py  pages.py
schemas/: eyeon_metadata.schema.yaml  eyeon_schema_overlay.yaml  schema.sql
utils/: config.py  db.py  dlt_schema.py  schema_blame.py  schema_ext.py  search_forms.py  utils.py
(+2 files in other folders)
